--- a/www/css/index.css
+++ b/www/css/index.css
@@ -81,6 +81,7 @@ footer {
   align-items: center;
   padding: 0.5em 1em;
   border-top: 1px solid #ccc;
+  flex-shrink: 0;
 }
 
 .choose-text {
